@@ -52,6 +52,7 @@ NEWS
   * Add ssi.content-type option (default text/html, fixes #615)
   * Add support for "real" entropy from /dev/[u]random (fixes #1977)
   * Adding support for additional chars in LDAP usernames (fixes #1941)
+  * Ignore multiple "If-None-Match" headers (only use first one, fixes #753)
 
 - 1.4.22 - 2009-03-07
   * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
